--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,14 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Media files
+media/*
+!media/res-hall-photos
+!media/dorm-room-photos
+media/res-hall-photos/*
+media/dorm-room-photos/*
+
+# Media exceptions here:
+!media/res-hall-photos/shaw.jpg
+!media/res-hall-photos/booth.jpg
